--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body{
   background-color: #0000ff;
 }
 .ofcan1:hover i{
-  transform: rotate(15deg);
+  transform: scale(1.10);
 }
 
 #cartItem{
@@ -69,7 +69,7 @@ body{
   
 /* The popup form - hidden by default */
 .wfc_cart_info {
-  width: 400px;
+  width: 450px;
   height: 70%;
   position: relative;
   display: none;
@@ -167,23 +167,25 @@ body{
   width: 100%;
 }
 .cmnBtn{
-  font-size: 14px;
-  padding: 10px 16px;
-  margin-bottom: 0;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: transparent;
+  border-width: 1px solid transparent;
+  border-radius: 0.375rem;
+  box-shadow: inset 0 1px 0rgba(255, 255, 255, 0.15),0 1px 1pxrgba(0, 0, 0, 0.075);
+  opacity: 0.65;
   display: inline-block;
-  text-decoration: none;
   text-align: center;
-  white-space: nowrap;
+  text-decoration: none;
   vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .couponBtn, .checkoutBtn{
   /* height: 50px; */
@@ -483,7 +485,7 @@ body{
 .wfc_list_item .wfc_product-item:last-child {
   border: none;
   margin: 0;
-  padding-bottom: 0;
+  padding-bottom: 15px;
 }
 
 .wfc_product-item .thumb {
