--- a/css/styles.css
+++ b/css/styles.css
@@ -30,105 +30,57 @@ a {
 /* Menu Button */
 .menu-button {
 	position: fixed;
-	z-index: 1000;
-	margin: 1em;
-	padding: 0;
-	width: 2.5em;
-	height: 2.25em;
-	border: none;
-	text-indent: 2.5em;
-	font-size: 1.5em;
-	color: transparent;
-	background: transparent;
-	cursor: pointer;
+    top: 0;
+    z-index: 1000;
+    margin: 3em;
+    padding: 0;
+    width: 2.5em;
+    height: 2.25em;
+    border: none;
+    text-indent: 2.5em;
+    font-size: 1.5em;
+    background: #fff;
+    cursor: pointer;
+    border: 1px solid black;
 }
-
 .menu-button::before {
 	position: absolute;
 	top: 0.5em;
 	right: 0.5em;
 	bottom: 0.5em;
-	left: 0.5em;
-	/* background: linear-gradient(#ffffff 20%, transparent 20%, transparent 40%, #ffffff 40%, #ffffff 60%, transparent 60%, transparent 80%, #ffffff 80%); */
-	background: linear-gradient(#373a47 20%, transparent 20%, transparent 40%, #373a47 40%, #373a47 60%, transparent 60%, transparent 80%, #373a47 80%);
-	content: '';
+	left: -2em;
 }
 
 .menu-button:hover {
 	opacity: 0.6;
 }
 
-.content-wrap {
-    position: relative;
-    background: #b4bad2;
-}
 
-.part_1{
-    width: 32%;
-    border: 1px solid #ccc;
-    padding: 30px;
-    display: inline-block;
-}
-.part_1:not(:last-child) {
-    margin-right: 1.66%;
-}
-
-.product_image{}
-.product_image img{
-    width: 100%;
-}
-.part_1 h3{
-    font-size: 36px;
-    margin: 0;
-}
-.part_1 p{
-    font-size: 18px;
-    margin: 15px 0 20px;
-}
-.part_1 button{
-    padding: 15px 30px;
-    background-color: #f03b3b;
-    border: 1px solid #f03b3b;
-    font-size: 16px;
-    color: #fff;
-    transition: 0.3s;
-}
-.part_1 button:hover{
-    padding: 15px 30px;
-    background-color: #a31212;
-    border: 1px solid #a31212;
-    font-size: 16px;
-    color: #fff;
-}
+/* Fast Cart Main Part */
 
 .wcfc-container {
 	background: #ffffff;
 }
 
 /* Main Part for cart */
-
 .wcfc-container-wrap {
 	position: absolute;
 	right: 0;
     top: 0;
-	/* right: -8px; */
 	z-index: 1001;
 	width: 350px;
 	height: 100%;
 	background: #FFFFFF;
-	/* padding: 2.5em 1em 0; */
 	font-size: 1.15em;
 	-webkit-transform: translate3d(1280px,0,0);
 	transform: translate3d(1280px,0,0);
-	/* -webkit-transform: translate3d(-320px,0,0);
-	transform: translate3d(-320px,0,0); */
 	-webkit-transition: -webkit-transform 0.4s;
 	transition: transform 0.4s;
 	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
 	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
 }
 
-.content::before {
+.wcfc-container::before {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -142,26 +94,26 @@ a {
 	transform: translate3d(100%,0,0);
 	-webkit-transition: opacity 0.4s, -webkit-transform 0s 0.4s;
 	transition: opacity 0.4s, transform 0s 0.4s;
-	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
-	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+	-webkit-transition-timing-function: cubic-bezier(0, 0, 0.34, 0.71);
+	transition-timing-function: cubic-bezier(0, 0, 0.34, 0.71);
 }
 
 .wcfc-show-container .wcfc-container-wrap {
     overflow-y: scroll;
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
-	-webkit-transition: -webkit-transform 0.8s;
-	transition: transform 0.8s;
-	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
-	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+	-webkit-transition: -webkit-transform 0.3s;
+	transition: transform 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(0, 0, 0.34, 0.71);
+	transition-timing-function: cubic-bezier(0, 0, 0.34, 0.71);
 }
 
-.wcfc-show-container .content::before {
+.wcfc-show-container .wcfc-container::before {
 	opacity: 1;
-	-webkit-transition: opacity 0.8s;
+	-webkit-transition: opacity 0.3s;
 	transition: opacity 0.8s;
-	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
-	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+	-webkit-transition-timing-function: cubic-bezier(0, 0, 0.34, 0.71);
+	transition-timing-function: cubic-bezier(0, 0, 0.34, 0.71);
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
@@ -220,7 +172,6 @@ a {
 }
 .wcfc-empty-content-wrapper h2{
     margin: 20px 0 5px;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 600;
     font-size: 24px;
@@ -229,7 +180,6 @@ a {
 }
 .wcfc-empty-content-wrapper p{
     margin: 0;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -238,23 +188,6 @@ a {
 }
 
 /* Close Button */
-/* .wcfc-close-button {
-	width: 1em;
-	height: 1em;
-	position: absolute;
-	right: 1em;
-	top: 1.4em;
-	overflow: hidden;
-	text-indent: 1em;
-	font-size: 0.75em;
-	border: none;
-	background: transparent;
-	color: transparent;
-	border: 1px solid #808080;
-	border-radius: 3px;
-	padding: 5px;
-    cursor: pointer;
-} */
 .wcfc-close-button {
 	position: absolute;
     right: 1em;
@@ -272,27 +205,6 @@ a {
     border: 1px solid #000;
 }
 
-/* .wcfc-close-button::before,
-.wcfc-close-button::after {
-	content: '';
-	position: absolute;
-	width: 1px;
-	height: 95%;
-	top: 0;
-	left: 46%;
-	background: #808080;
-}
-
-.wcfc-close-button::before {
-	-webkit-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-
-.wcfc-close-button::after {
-	-webkit-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-} */
-
 .wcfc-main-container {
     /* display: none; */
 }
@@ -304,7 +216,6 @@ a {
 .wcfc-items {}
 .wcfc-single-item {
 	padding: 20px 1em 30px;
-	/* border-top: 1px solid #E8E8E8; */
 	border-bottom: 1px solid #E8E8E8;
 	display: flex;
     justify-content: center;
@@ -322,7 +233,6 @@ a {
 }
 
 .wcfc-item-image {
-	/* border: 1px solid red; */
 	width: 20%;
 	display: flex;
     align-items: center;
@@ -374,12 +284,10 @@ a {
 .wcfc-item-details {
 	width: 60%;
 	padding: 0 12px;
-	/* width: 1px solid green; */
 }
 .wcfc-item-title{
 	margin: 0;
 	color: #525252;
-	/* font-family: 'Inter'; */
 	font-style: normal;
 	font-weight: 400;
 	font-size: 16px;
@@ -387,7 +295,6 @@ a {
 }
 .wcfc-item-details p{
 	margin: 5px 0 10px;
-	/* font-family: 'Inter'; */
 	font-style: normal;
 	font-weight: 400;
 	font-size: 14px;
@@ -398,7 +305,6 @@ a {
 .wcfc-item-details .wcfc-quantity{}
 
 .wcfc-item-price{
-	/* border: 1px solid red; */
 	width: 20%;
 	text-align: right;
 }
@@ -410,15 +316,7 @@ a {
 	line-height: 140%;
 }
 
-
-.wcfc-qty {
-    /* display: block;
-    line-height: 1.2;
-    font-size: 13px;
-    color: #222222;
-    font-weight: 400;
-    margin-top: 5px; */
-}
+.wcfc-qty {}
 .wcfc-quantity{
     position: relative;
     display: inline-flex;
@@ -430,7 +328,6 @@ a {
     backface-visibility: hidden;
 }
 .wcfc-quantity form {
-    /* border: 1px solid #eaeaea; */
     overflow: hidden;
     margin: 0;
     transition: opacity .3s ease;
@@ -450,7 +347,6 @@ a {
     flex: 1;
     align-items: center;
     justify-content: center;
-    /* border-right: 1px solid #eaeaea; */
     padding: 0 5px;
 }
 .wcfc-quantity .wcfc-quantity-col.wcfc-quantity-col-input {
@@ -520,7 +416,6 @@ a {
 .wcfc-menu-footer-top{
     padding: 30px 1em 60px;
     border-top: 1px solid #E8E8E8;
-    /* border-bottom: 1px solid #E8E8E8; */
 }
 .wcfc-subtotal{
     display: flex;
@@ -530,7 +425,6 @@ a {
 .wcfc-st-left{}
 .wcfc-st-left h2{
     margin: 0;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -541,7 +435,6 @@ a {
     text-align: right;
 }
 .wcfc-st-right span{
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -554,7 +447,6 @@ a {
 }
 .wcfc-shipping-method h2{
     margin: 0;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -570,7 +462,6 @@ a {
     flex-direction: column;
 }
 .wcfc-shipping-option label{
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -620,7 +511,6 @@ a {
     text-align: right;
 }
 .wcfc-shipping-rate span{
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-height: 400;
     font-size: 14px;
@@ -633,7 +523,6 @@ a {
 }
 .wcfc-apply-coupon h2{
     margin: 0 0 10px 0;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -670,7 +559,6 @@ a {
     background-color: transparent;
     border: 1px solid #2BC31A;
     border-radius: 0 4px 4px 0;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -683,7 +571,6 @@ a {
     text-align: right;
 }
 .wcfc-coupon-value span{
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -694,7 +581,6 @@ a {
 .wcfc-shipping-address{}
 .wcfc-shipping-address h2{
     margin: 0 0 10px 0;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -703,7 +589,6 @@ a {
 }
 .wcfc-shipping-address #wcfc-address{
     margin: 0;
-    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -720,9 +605,7 @@ a {
     flex-direction: column;
     align-items: center;
 }
-.wcfc-bottom-button a{
-    
-}
+.wcfc-bottom-button a{}
 .wcfc-bottom-button a i{
     margin-right: 8px;
 }
